adds support for generic external form backends
Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

rework validation of ResultAssets and ExternalTaskState

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

fix test by cloning uri builder

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds notice to spec that it is part of a test

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds multiple results to ExternalFormBackendTest

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

fix: resorting result assets

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

fix vacuum errors

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds ci lint check for form backend OpenAPI spec

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

fixes from develop rebase

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

wip serialization test for ExternalExecution

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds documentation

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

more serialization test

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds serialization test for external form backend

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

makes type id transparent to form backend, extracts localized label

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

validate unique plugins

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

adds authentication

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

use mock server with openapi spec

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github.com>

remove unused fields

Signed-off-by: Max Thonagel <12283268+thoniTUB@users.noreply.github